--- a/static/global.css
+++ b/static/global.css
@@ -3,6 +3,7 @@
     --foreground: #eeeaea;
     --accent: #9e08bc59;
     --success: #40be3e;
+    --failure: #f15656;
     --background-translucent: #1f1f227f;
     
     background-color: var(--background);
@@ -35,6 +36,23 @@ button {
         background-color: var(--accent);
         transform: translateY(-3%);
     }
+}
+
+dialog {
+    outline: none;
+    border: 1px solid var(--foreground);
+    border-radius: 10px;
+
+    &::backdrop {
+        backdrop-filter: blur(1px) brightness(75%);
+    }
+}
+
+input {
+    outline: none;
+    border: 1px solid var(--foreground);
+    border-radius: 2px;
+    padding: 2px 5px;
 }
 
 .d-flex {
@@ -89,4 +107,9 @@ button {
 
 .mb-3 {
     margin-bottom: 3rem;
+}
+
+.hidden {
+    opacity: 0;
+    transition: opacity .5s ease-in-out;
 }
